// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Animation component renders it children 1`] = `
<span
  style={
    Object {
      "animation": "
                bGJZDZ 1s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
>
  <h1>
    Hello World
  </h1>
</span>
`;

exports[`Animation component renders it children with \`block\` prop 1`] = `
<div
  style={
    Object {
      "animation": "
                bGJZDZ 1s ease 0s 1 normal
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "block",
    }
  }
>
  <h1>
    Hello World!
  </h1>
</div>
`;

exports[`Animation component renders it children with props 1`] = `
<span
  style={
    Object {
      "animation": "
                bGJZDZ 2s ease 4s 1 reverse
                none running
              ",
      "backfaceVisibility": "visible",
      "display": "inline-block",
    }
  }
>
  <h1>
    Hello World!
  </h1>
</span>
`;
